# BrickBrain

./: .gitignore  DEVELOPMENT_RULES.md  README.md  TABLE_DEPENDENCY_GRAPH.md  blog_scraper.py  blog_scraper_notebook.py  databricks.yml  deploy.sh  job_config.json  problem_statement.md  requirements.txt  simple_job.json  urls.txt
brickbrain/: databricks.yml
brickbrain/resources/: data-ingestion.yml
brickbrain/scheduled_queries/: .gitignore  databricks.yml  scheduled_brickbrain_job.yml
brickbrain/scheduled_queries/notebooks/: ScheduledBrickBrainQuery.py
bundles/blog-scraper/: .bundle  databricks.yml
bundles/blog-scraper/notebooks/: blog_scraper_pipeline.py
cloudflare-mcp-worker/: .dev.vars.example  .gitignore  QUICK_START.md  README.md  mcp-bridge.sh  package-lock.json  package.json  tsconfig.json  update-secrets.sh  wrangler.toml
cloudflare-mcp-worker/src/: index.ts
docs/archive/: NEW_ARCHITECTURE.md  README.md
shared/utils/: blog_scraper.py  run_scraper.py
ssa_agent/: QUICK_REFERENCE.md  databricks.yml  setup_brickbrain_workspace.py
ssa_agent/_resources/: artifacts.yml  data-ingestion.yml
ssa_agent/agent/: agent_brick.yaml
ssa_agent/agent/retriever_tool/: DATA_INGESTION.md
ssa_agent/ask_brickbrain/: .gitignore  HOW_TO_USE_INSTRUCTIONS.md  LICENSE  README.md  add_to_claude.sh  app.yaml  app_status.sh  brickbrain_agent_instructions.txt  brickbrain_mcp.py  databricks.yml  env.example  pyproject.toml  requirements.txt  setup.sh
ssa_agent/resources/: data-ingestion.yml  job_config.json
ssa_agent/scheduled_queries/: README.md
(+32 files in other folders)
