[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brickbrain-mcp"
version = "1.0.0"
description = "BrickBrain MCP Server for Databricks Knowledge Agent"
authors = [
    {name = "BrickBrain Team"}
]
dependencies = [
    "databricks-sdk>=0.20.0",
]
requires-python = ">=3.8"

[project.scripts]
brickbrain-mcp = "brickbrain_mcp:main"

[project.urls]
Homepage = "https://github.com/jiteshsoni/BrickBrain/tree/main/ssa_agent/ask_brickbrain"
Repository = "https://github.com/jiteshsoni/BrickBrain.git"

[tool.hatch.build.targets.wheel]
packages = ["brickbrain_mcp.py"]
